# goit-pycore-final

./: .gitignore  README.md  main.py  notes.pkl  pyproject.toml  remove-tag  requirements.txt
include/: address_book.py  address_handlers.py  adress_book.py  birthday.py  birthday_handlers.py  email_field.py  error.py  help_handlers.py  name.py  note.py  note_tag.py  note_text.py  notes.py  notes_book.py  notes_handlers.py  phone.py  record.py  storage.py  utils.py
src/console_assistant/: console_assistant.py
src/console_assistant/include/: __init__.py  birthday.py  storage.py
